--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </header>
     <form id="form-atividade">
         <input type="text" required placeholder="Nome da Atividade" id="nome-atividade"/>
-        <input type="number" required placeholder="Nota do aluno" id="nota-atividade"/>
+        <input type="number" required placeholder="Nota do aluno" id="nota-atividade" max="10"/>
         <button type="submit">Adicionar+</button>
     </form >
     <table cellSpacing="0">
